# slideshow-rs

./: .gitignore  Cargo.toml  README.md
src/: constants.rs  engine.rs  ffmpeg.rs  main.rs  slide.rs  state.rs  subject_detection.rs  texture_loader.rs
src/push_box/: engine.rs  mod.rs  slide.rs  state.rs
src/spiral/: engine.rs  layout.rs  mod.rs  slide.rs  state.rs
